--- a/Makefile.inc
+++ b/Makefile.inc
@@ -7,17 +7,8 @@ INCLUDE = \
   -I../../src/json \
   -I../../src/webserver
 
-LIBS = 
-
-UNAME_S = $(shell uname -s)
-
-ifeq ($(UNAME_S),Darwin)
-  LIBS += -lpthread
-endif
-
-ifeq ($(UNAME_S),Linux)
-  LIBS += -pthread
-endif
+LIBS = \
+  -pthread
 
 # Base sources
 SOURCES = $(shell find ../../src -name '*.cc')
