Added webserver config to examples

--- a/config.json.example
+++ b/config.json.example
@@ -32,5 +32,15 @@
     "modules" : {
       "moduleName" : "moduleClass",
     }
+  },
+
+  // Web server configuration
+  "webserver" : {
+
+    "port" : 8080,
+
+    "threads" : 10,
+
+    "documentRoot" : "www"
   }
 }
