--- a/examples/dynamicModules/config.json
+++ b/examples/dynamicModules/config.json
@@ -30,5 +30,14 @@
     "modules" : {
       "god" : "Creator"
     }
+  },
+  // Web server configuration
+  "webserver" : {
+
+    "port" : 8080,
+
+    "threads" : 10,
+
+    "documentRoot" : "www"
   }
 }
