--- a/examples/tictoc/config.json
+++ b/examples/tictoc/config.json
@@ -40,6 +40,9 @@
 
     "threads" : 10,
 
-    "documentRoot" : "www"
+    "documentRoot" : "./www",
+
+    // Connection timeout (in seconds)
+    "timeout" : 1
   }
 }
