--- a/examples/tictoc/config.json
+++ b/examples/tictoc/config.json
@@ -14,7 +14,10 @@
     "timeScaleExp" : -3.0,
 
     // Log simulation messages to this file
-    "logFileName" : "sim.out"
+    "logFileName" : "sim.out",
+
+    // Mersenne Twister RNG seed
+    "mtSeed" : 1234
   },
 
   // Domain configuration
