Added option to use multiple RNG with different seeds

--- a/examples/compoundModules/config.json
+++ b/examples/compoundModules/config.json
@@ -3,7 +3,7 @@
     "timeLimit" : 100,
     "timeScaleExp" : -3.0,
     "logFileName" : "sim.out",
-    "mtSeed" : 1234
+    "mtSeed" : [1234, 1235]
   },
 
   "domain" : {
